--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@types/slick-carousel": "^1.6.37",
     "jquery": "^3.6.0",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "next-redux-wrapper": "^7.0.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
@@ -30,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.36.0",
     "slick-carousel": "^1.8.1",
-    "ts-transformer-keys": "^0.4.3"
+    "ts-transformer-keys": "^0.4.3",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "@types/next-redux-wrapper": "^3.0.0",
@@ -38,6 +39,7 @@
     "@types/react": "^17.0.15",
     "@types/react-redux": "^7.1.18",
     "@types/react-slick": "^0.23.5",
+    "@types/underscore": "^1.11.3",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1"
   }
