--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "sass": "^1.36.0",
+    "simple-react-lightbox": "^3.6.6",
     "slick-carousel": "^1.8.1",
     "ts-transformer-keys": "^0.4.3",
     "underscore": "^1.13.1"
@@ -39,6 +41,7 @@
     "@types/react": "^17.0.15",
     "@types/react-redux": "^7.1.18",
     "@types/react-slick": "^0.23.5",
+    "@types/simple-react-lightbox": "^3.6.1",
     "@types/underscore": "^1.11.3",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1"
