--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@material-ui/styles": "^5.0.0-beta.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/slick-carousel": "^1.6.37",
+    "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "next": "^11.1.0",
+    "next-absolute-url": "^1.2.2",
     "next-redux-wrapper": "^7.0.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
