--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/styles": "^5.0.0-beta.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/slick-carousel": "^1.6.37",
+    "also": "0.0.14",
     "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "next": "^11.1.0",
@@ -34,7 +35,9 @@
     "sass": "^1.36.0",
     "simple-react-lightbox": "^3.6.6",
     "slick-carousel": "^1.8.1",
+    "swr": "^0.5.6",
     "ts-transformer-keys": "^0.4.3",
+    "typescript": "^4.3.5",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
