--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^11.1.0",
     "next-absolute-url": "^1.2.2",
     "next-redux-wrapper": "^7.0.2",
+    "next-translate": "^1.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
