--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
@@ -35,6 +36,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "sass": "^1.36.0",
+    "sharp": "^0.29.1",
     "simple-react-lightbox": "^3.6.6",
     "slick-carousel": "^1.8.1",
     "swr": "^0.5.6",
