--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/lab": "^5.0.0-alpha.41",
     "@material-ui/styles": "^5.0.0-beta.2",
+    "@mui/icons-material": "^5.0.0-rc.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/slick-carousel": "^1.6.37",
     "also": "0.0.14",
@@ -24,6 +25,7 @@
     "next": "^11.1.0",
     "next-absolute-url": "^1.2.2",
     "next-redux-wrapper": "^7.0.2",
+    "next-seo": "^4.26.0",
     "next-translate": "^1.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
